# yombir

./: .gitignore  CMakeLists.txt  Makefile  README.md  yombir.sh
captures/: README.md
config/: screen_resolution.txt
gradients/: README.md  generateGradient.js
icons/: LICENSE.txt  yombir.desktop
icons/appicon/: LICENSE.txt
lib/libv4l2cpp/inc/: logger.h
lib/libv4l2cpp/src/: V4l2Access.cpp  V4l2Capture.cpp  V4l2Device.cpp  V4l2MmapDevice.cpp  V4l2Output.cpp  V4l2ReadWriteDevice.cpp  logger.cpp
src/: main.cpp
utils/: README.md  convert_t16_to_mp4.sh
utils/convertRAWtoPNGs/: convertRAWtoPNGs.js  package-lock.json  package.json
videos/: README.md
